--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,10 @@
   ],
   "private": true,
   "main": [
-    "anypoint-text-field.html"
+    "anypoint-text-field.html",
+    "anypoint-text-container.html"
+    "anypoint-text-textarea.html"
+    "anypoint-validation-result.html"
   ],
   "repository": {
     "type": "git",
