--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "anypoint-text-field",
   "description": "Text input styled for the Anypoint platform as a Polymer powered web component",
   "version": "0.1.3",
-  "license": "Apache-2.0 OR CC-BY-4.0",
+  "license": "All rights reserved to Mulesoft Inc.",
   "authors": [
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
