--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anypoint-text-field",
   "version": "0.1.3",
-  "license": "Apache-2.0 OR CC-BY-4.0",
+  "license": "All rights reserved to Mulesoft Inc.",
   "description": "Text input styled for the Anypoint platform as a Polymer powered web component",
   "devDependencies": {
     "polymer-cli": "^0.16.0"
